--- a/Carnes/Bistec.html
+++ b/Carnes/Bistec.html
@@ -39,7 +39,7 @@
       <header class="recipe-header">
         <h1>Bistec Encebollado</h1>
         <p class="meta">Tiempo: 35 min • Raciones: 2</p>
-        <img src="../img/Img_1.jpeg" alt="Bistec Encebollado" class="recipe-hero">
+        <img src="../img/img_1.jpeg" alt="Bistec Encebollado" class="recipe-hero">
       </header>
 
       <section class="recipe-intro">
@@ -99,7 +99,7 @@
         <li>Si la sartén está muy caliente, baja un poco el fuego para no quemar la mantequilla.</li>
       </ul>
       <figure class="mini-figure">
-        <img src="../img/Img_1.jpeg" alt="Guarnición">
+        <img src="../img/img_1.jpeg" alt="Guarnición">
         <figcaption class="small">Guarnición sugerida: papas asadas.</figcaption>
       </figure>
     </aside>
