--- a/Pescados/Filete_Pescado.html
+++ b/Pescados/Filete_Pescado.html
@@ -39,7 +39,7 @@
       <header class="recipe-header">
         <h1>Filete de Pescado</h1>
         <p class="meta">Tiempo: 25 min • Raciones: 2</p>
-        <img src="../img/Img_3.jpeg" alt="Filete de Pescado" class="recipe-hero">
+        <img src="../img/img_3.jpeg" alt="Filete de Pescado" class="recipe-hero">
       </header>
 
       <section class="recipe-intro">
