--- a/Pollos/Pollo_Horno.html
+++ b/Pollos/Pollo_Horno.html
@@ -39,7 +39,7 @@
       <header class="recipe-header">
         <h1>Pollo Horneado</h1>
         <p class="meta">Tiempo: 45 min • Raciones: 4</p>
-        <img src="../img/Img_2.jpeg" alt="Pollo al Horno" class="recipe-hero">
+        <img src="../img/img_2.jpeg" alt="Pollo al Horno" class="recipe-hero">
       </header>
 
       <section class="recipe-intro">
