--- a/Postre/Flan_Vainilla.html
+++ b/Postre/Flan_Vainilla.html
@@ -39,7 +39,7 @@
       <header class="recipe-header">
         <h1>Flan Casero de Vainilla</h1>
         <p class="meta">Tiempo: 20 min (+ enfriado) • Raciones: 4</p>
-        <img src="../img/Img_4.jpeg" alt="Flan de Vainilla" class="recipe-hero">
+        <img src="../img/img_4.jpeg" alt="Flan de Vainilla" class="recipe-hero">
       </header>
 
       <section class="recipe-intro">
