--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
         <figure class="hero-slider" aria-label="Menú de categorías destacadas">
           <div class="slider-container slides">
             <a href="Carnes/Bistec.html" class="slide">
-              <img src="img/Img_1.jpeg" alt="Recetas de carne" class="slide-img">
+              <img src="img/img_1.jpeg" alt="Recetas de carne" class="slide-img">
               <figcaption class="hero-caption">🥩 Carne: recetas jugosas</figcaption>
             </a>
 
             <a href="Pollos/Pollo_Horno.html" class="slide">
-              <img src="img/Img_2.jpeg" alt="Recetas de pollo" class="slide-img">
+              <img src="img/img_2.jpeg" alt="Recetas de pollo" class="slide-img">
               <figcaption class="hero-caption">🍗 Pollo: sabroso y versátil</figcaption>
             </a>
 
             <a href="Pescados/Filete_Pescado.html" class="slide">
-              <img src="img/Img_3.jpeg" alt="Recetas de pescado" class="slide-img">
+              <img src="img/img_3.jpeg" alt="Recetas de pescado" class="slide-img">
               <figcaption class="hero-caption">🐟 Pescado: fresco y saludable</figcaption>
             </a>
 
             <a href="Postre/Flan_Vainilla.html" class="slide">
-              <img src="img/Img_4.jpeg" alt="Recetas de postres" class="slide-img">
+              <img src="img/img_4.jpeg" alt="Recetas de postres" class="slide-img">
               <figcaption class="hero-caption">🍰 Postres: dulces tentaciones</figcaption>
             </a>
           </div>
@@ -103,7 +103,7 @@
       <div class="cards-grid">
         <!-- Carne -->
         <article class="card">
-          <img src="img/Img_1.jpeg" alt="Bistec Encebollado" class="card-img">
+          <img src="img/img_1.jpeg" alt="Bistec Encebollado" class="card-img">
           <div class="card-body">
             <h3 class="card-title">Bistec Encebollado</h3>
             <p class="card-text">Corte jugoso, salsa ligera y guarnición crujiente — ideal para ocasiones especiales o cenas rápidas.</p>
@@ -113,7 +113,7 @@
 
         <!-- Pollo -->
         <article class="card">
-          <img src="img/Img_2.jpeg" alt="Pollo al Horno" class="card-img">
+          <img src="img/img_2.jpeg" alt="Pollo al Horno" class="card-img">
           <div class="card-body">
             <h3 class="card-title">Pollo al Horno</h3>
             <p class="card-text">Corte tierno y piel crujiente con toque cítrico. Perfecto para familia.</p>
@@ -123,7 +123,7 @@
 
         <!-- Pescado -->
         <article class="card">
-          <img src="img/Img_3.jpeg" alt="Filete Pescado" class="card-img">
+          <img src="img/img_3.jpeg" alt="Filete Pescado" class="card-img">
           <div class="card-body">
             <h3 class="card-title">Filete Pescado</h3>
             <p class="card-text">Pescado suave, limón y hierbas — listo en menos de 25 minutos.</p>
@@ -133,7 +133,7 @@
 
         <!-- Postre -->
         <article class="card">
-          <img src="img/Img_4.jpeg" alt="Postre" class="card-img">
+          <img src="img/img_4.jpeg" alt="Postre" class="card-img">
           <div class="card-body">
             <h3 class="card-title">Flan Vainilla</h3>
             <p class="card-text">Ligero, cremoso y fácil de preparar — el final perfecto para cualquier comida.</p>
